<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_main_overlay" >
    <Button
        android:id="@+id/btn_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_server"
        android:layout_alignBottom="@+id/btn_server"
        android:layout_alignParentRight="true"
        android:layout_marginRight="48dp"
        android:text="@string/controller" />

    <Button
        android:id="@+id/btn_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_device_ip"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="50dp"
        android:text="@string/server" />

    <TextView
        android:id="@+id/txt_device_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="176dp"
        android:text="@string/main_tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </RelativeLayout>

</RelativeLayout>